# Cooky

./: .gitignore  CMakeLists.txt  Makefile  README.md  engine
assets/scripts/: Level1.lua  game.lua  scriptTest.lua
assets/scripts/Game1/: main.lua
assets/scripts/Test/: game.lua  main.lua  scriptTest.lua
libs/imgui/: imgui_impl_sdl.cpp
libs/sol/: sol.hpp
libs/soloud/include/: soloud_speech.h
src/: Game.cpp  Game.h  Logger.h  Main.cpp
src/AssetManager/: AssetManager.cpp  AssetManager.h
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Components/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  CircleColliderComponnet.h  ColliderComponent.h  KeyboardControlComponent.h  PolygonColliderComponent.h  RigidBodyComponent.h  ScriptComponent.h  SpriteComponent.h  TextLabelComponent.h  TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/EventBus/: Event.h  EventBus.h
src/Events/: CallbackEvent.h  CollisionEvent.h  KeyPressedEvent.h
src/Game/: Game.cpp  Game.h  LevelLoader.cpp  LevelLoader.h  ScriptLoader.cpp  ScriptLoader.h
src/Logger/: Logger.cpp  Logger.h
src/Lua/: Keyboard.lua  Physics.lua  Sound.lua  Utils.lua
src/Physics/: ContactListener.cpp  ContactListener.h
src/System/: AnimationSystem.h  CallbackEventSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageSystem.h  KeyboardControlSystem.h  KeyboardSystem.h  MovementSystem.h  PhysicsSystem.h  RenderColliderSystem.h  RenderGUISystem.h  RenderSystem.h  RenderTextSystem.h  ScriptSystem.h
src/Utils/: CookyUtils.h  DebugDraw.cpp  DebugDraw.h  Math.cpp  Math.h
(+8 files in other folders)
